# fused-turboquant

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_e2e.py  bench_quality.py  bench_throughput.py  bench_vllm_baseline.py  results_3bit_kv.json  results_4bit_kv.json  results_batch_3bit.json  results_gb10.json  results_long_context_3bit.json  results_qwen3_8b_3bit.json  results_qwen3_8b_4bit.json  run_benchmark.py  run_full_comparison.py  run_fused_benchmark.py  run_remaining_benchmarks.py
benchmarks/dejan_baseline/: run_demo.py  triton_attention.py  turboquant_core.py  turboquant_fused.py
examples/: quickstart.py
src/fused_turboquant/: __init__.py
src/fused_turboquant/benchmark/: runner.py
src/fused_turboquant/cache/: kv_cache.py
src/fused_turboquant/core/: adaptive.py  delta_kv.py  hadamard.py  lloyd_max.py  packing.py  progressive.py  qjl.py  quantizer.py
src/fused_turboquant/hf/: __init__.py  chunked_prefill.py  fused_cache.py  simulation_cache.py
src/fused_turboquant/kernels/: triton_attention.py  triton_decode.py  triton_encode.py  triton_flash_decode.py  triton_rht.py  triton_v_attention.py
src/fused_turboquant/vllm_plugin/: __init__.py  attention_impl.py  backend.py  cache_ops.py  plugin.py
tests/: conftest.py  test_hadamard.py  test_quantizer.py  test_vllm_backend.py
